--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,5 +24,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: pushd .. ; git submodule init ;  git submodule update ; popd
+    - run: pushd ../COVID-19/ ; git checkout master; git pull; popd
+    - run: pushd  ../coronavirus-data/ ;  git checkout master; git pull; popd
+    - run: npmv=$(echo $(npm -v) | head -c 1); if [ "$npmv" -lt "6" ]; then npm i -g npm; else echo "Node.js Docker Team finally decided to include npm v6+ in latest image; you can remove this script now"; fi
+    - run: npm ci 
     - run: cd website; npm run build --if-present; cd ..
 
