--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
     - name: firebaseConfig
       env:
         FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
-      run: cd website; echo "${FIREBASE_CONFIG}" > src/firebaseConfig.json; sed  -e 's/\(.\)/\1 /g'  src/firebaseconfig.json; cd ..
+      run: cd website; echo "${FIREBASE_CONFIG}" > src/firebaseConfig.json; sed  -e 's/\(.\)/\1 /g'  src/firebaseConfig.json; cd ..
     - run: git submodule init ;  git submodule update 
     - run: pushd ./COVID-19/ ; git checkout master; git pull; popd
     - run: pushd  ./coronavirus-data/ ;  git checkout master; git pull; popd
