--- a/.github/workflows/datapull.yml
+++ b/.github/workflows/datapull.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      - name: test jq
+        run: which jq
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
