--- a/.github/workflows/datapull.yml
+++ b/.github/workflows/datapull.yml
@@ -7,7 +7,7 @@ name: Data Pull (refresh)
 
 on:
   schedule:
-  - cron: "0,20,40 * * * *"
+  - cron: "10,30,50 * * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -20,16 +20,20 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      - name: test jq
-        run: which jq
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Setup timezone
+        uses: zcong1993/setup-timezone@master
+        with:
+          timezone: America/Los_Angeles
+      - name: firebaseConfig
+        env:
+          FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
+        run: cd website; echo "${FIREBASE_CONFIG}" > src/firebaseConfig.json;  cd ..
+      - run: cd website; npm ci  ; cd ..
+      - run: cd website; git config --global user.email "xhuang@gmail.com"; git config --global user.name "Xun Wilson Huang (from GitHub Action )"; cd ..
+      - run: cd website; sh refreshdata.sh ; cd .. 
+      - run: cd website; pushd countydata/CA-06; sh fetch.sh; popd; cd .. 
+      - run: cd website; node refresh.js ; cd .. 
