--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,12 +25,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v2
-    #- name: Setup timezone
-      #uses: zcong1993/setup-timezone@master
-      #with:
-        #timezone: America/Los_Angeles
+    - name: Setup timezone
+      uses: zcong1993/setup-timezone@master
+      with:
+        timezone: America/Los_Angeles
     - name: firebaseConfig
       env:
         FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
