--- a/.github/workflows/datapull.yml
+++ b/.github/workflows/datapull.yml
@@ -25,6 +25,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v
       - name: Setup timezone
         uses: zcong1993/setup-timezone@master
         with:
