--- a/.github/workflows/datapull.yml
+++ b/.github/workflows/datapull.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - run: source script-mac.sh
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v
       - name: Setup timezone
