--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "coronavirus-data"]
 	path = coronavirus-data
 	url = https://github.com/nychealth/coronavirus-data
+[submodule "vaccine-module"]
+	path = vaccine-module
+	url = https://github.com/govex/COVID-19
