adding vaccine data from bloomberg

--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "babel-eslint": "10.0.3",
     "build-url": "^2.0.0",
+    "cheerio": "^1.0.0-rc.5",
     "covidmodule": "file:covidmodule",
     "csvtojson": "^2.0.10",
     "d3-scale": "^3.2.1",
