--- a/.github/workflows/pub_ghpages.yml
+++ b/.github/workflows/pub_ghpages.yml
@@ -40,7 +40,8 @@ jobs:
     - run: cd website; npm run data; cd ..
     - run: cd website; npm run build --if-present; cd ..
     - run: cd website; echo "covid-19.town" > build/CNAME; cd ..
-    - run: cd website; git remote add origin git@github.com:xunhuang/my-app.git; cd ..
+    - name: Setup new git
+      run: cd website; git init; git remote add origin git@github.com:xunhuang/my-app.git; cd ..
     - name: Deploy
       run: cd website node node_modules/gh-pages/bin/gh-pages.js -d build
 
