--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -11,6 +11,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: cd website; npm ci ; cd ..
+    - name: Deploy 
+      uses: JamesIves/github-pages-deploy-action@3.7.1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages # The branch the action should deploy to.
+        FOLDER: public # The folder the action should deploy.
+        CLEAN: true # Automatically remove deleted files from the deploy branch
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@master
       env:
