--- a/website/package.json
+++ b/website/package.json
@@ -63,7 +63,8 @@
     "build": "react-scripts build",
     "deploy": "react-scripts build; firebase deploy --only hosting",
     "test": "react-scripts test",
-    "data": "node normalize_data.js; node slicer.js ; node world_data_gen.js",
+    "data": "node normalize_data.js; node slicer.js",
+    "data2": "node normalize_data.js; node slicer.js ; node world_data_gen.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
