--- a/.github/workflows/pub_ghpages.yml
+++ b/.github/workflows/pub_ghpages.yml
@@ -40,7 +40,7 @@ jobs:
     - run: cd website; npm run data; cd ..
     - run: cd website; npm run build --if-present; cd ..
     #- run: cd website; mkdir -p build; echo "Hello Wilson " > build/index.html; cd ..
-    - run: cd website; echo "covid-19.town" > build/CNAME; cd ..
+    - run: cd website; echo "covid19news.today" > build/CNAME; cd ..
     - name: Setup new git
       run: cd website; git init; git remote add origin git@github.com:xunhuang/my-app.git; cd ..
     # - name: Deploy
