changing according to cron's format at github action

--- a/.github/workflows/pub_ghpages.yml
+++ b/.github/workflows/pub_ghpages.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-  - cron: "10,30,50 * * * *"
+  - cron: "*/20 * * * *"
   workflow_dispatch:
 
 jobs:
