--- a/.github/workflows/datapull.yml
+++ b/.github/workflows/datapull.yml
@@ -7,7 +7,7 @@ name: Data Pull (refresh)
 
 on:
   schedule:
-  - cron: "10,30,50 * * * *"
+  - cron: "*/10 * * * *"
   workflow_dispatch:
 
 defaults:
